Changing background color

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     width: 100;;
     height: 500px;
     padding: 10px;
-    background-color: #c70032;
+    background-color: #19d184;
 }
 .container h1{
     font-size: 30px;
